Fix bug text overflow on Product card name

--- a/src/components/Product/styles/cardList.less
+++ b/src/components/Product/styles/cardList.less
@@ -69,10 +69,10 @@
         box-shadow: @border-top-light;
         cursor: pointer;
         p {
-          display: flex;
-          align-items: center;
           height: 32px;
+          padding: 7px 0;
           overflow: hidden;
+          line-height: 20px;
           white-space: nowrap;
           text-overflow: ellipsis;
           &:global(.product-description) {
